# claude-code-lab

./: .dockerignore  .env.example  GEMINI.md  PROJECT_VALUE.md  README.md  SERVICE_PLAN.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: .dockerignore  Dockerfile.api  Dockerfile.ui  init.sql
src/: __init__.py
src/agents/: __init__.py  base.py  editor.py  planner.py  researcher.py  writer.py
src/api/: main.py
src/api/routes/: __init__.py  auth.py  content.py  websocket.py
src/db/: __init__.py  cache.py  database.py  models.py  repository.py
src/mcp/: client.py
src/mcp/servers/: __init__.py
src/models/: __init__.py  content.py  user.py
src/services/: __init__.py  auth_service.py  export_service.py
src/utils/: __init__.py  config.py  exceptions.py  logging.py  retry.py
src/workflows/: __init__.py  content_pipeline.py
tests/: __init__.py
tests/test_agents/: test_planner.py  test_researcher.py
tests/test_api/: test_auth.py  test_content.py
tests/test_db/: test_cache.py  test_repository.py
tests/test_services/: test_export.py
tests/test_utils/: test_retry.py
tests/test_workflows/: test_content_pipeline.py
ui/: app.py
ui/pages/: history.py  settings.py
